--- a/server/themes/one-page-new-age/templates/server/html.hbs
+++ b/server/themes/one-page-new-age/templates/server/html.hbs
@@ -15,14 +15,14 @@
 
   {{#if req.we.systemSettings.iconUrl}}
     <link rel="shortcut icon" href="{{req.we.systemSettings.iconUrl}}">
+  {{else}}
+    <link rel="shortcut icon" href="/public/project/favicon.ico">
   {{/if}}
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 
   {{{render-metadata-tags}}}
   {{{render-stylesheet-tags}}}
