--- a/server/themes/one-page-new-age/templates/server/partials/header.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/header.hbs
@@ -1,33 +1,4 @@
 {{{template 'partials/header-topbar'}}}
-{{!-- <div class="header-topbar">
-  <div class="container padding-none">
-    <div class="row">
-      <div class="col-xs-4 col-sm-4 col-md-4 welcome-text">
-        {{#if req.we.config.isHotel}}
-          <a href="/reservas" class="btn btn-theme btn-topbar hvr-shutter-out-vertical btn-default">
-            <i class="glyphicon glyphicon-briefcase"aria-hidden="true"></i>
-            <span class="hidden-xs">Reservas</span>
-          </a>
-        {{/if}}
-        {{#if req.we.config.isONG}}
-          <a href="/doar" class="btn btn-theme btn-topbar hvr-shutter-out-vertical btn-default">
-            <i class="glyphicon glyphicon-gift"aria-hidden="true"></i>
-            <span class="hidden-xs">Doações</span>
-          </a>
-        {{/if}}
-      </div>
-      <div class="col-xs-4 col-sm-4 col-md-4">
-        {{we-menu menuSocial class="list-inline text-center icon-style-1"}}
-      </div>
-      <div class="col-xs-4 col-sm-4 col-md-4 text-right">
-        <a href="/site-contact" class="btn btn-theme btn-topbar hvr-shutter-out-vertical btn-default">
-          <i class="glyphicon glyphicon-phone-alt"aria-hidden="true"></i>
-          <span class="hidden-xs">Entre em contato</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</div> --}}
 <nav id="mainNav" class="navbar navbar-default {{#if req.we.systemSettings.logoUrl}}with-site-logo{{/if}}">
   <div class="container">
     <div class="navbar-header">
@@ -38,9 +9,11 @@
         {{#if req.we.systemSettings.logoUrl}}
           <img src="{{req.we.systemSettings.logoUrl}}"
                alt="Logo" >
+        {{else}}
+          <img src="/public/project/logo.png" alt="Logo" >
         {{/if}}
         {{#if req.we.systemSettings.siteName}}
-          <span class="site-name">{{req.we.systemSettings.siteName}}</span>
+          <span class="site-name sr-only">{{req.we.systemSettings.siteName}}</span>
         {{/if}}
       </a>
     </div>
