--- a/server/widgets/latest-histories/form.hbs
+++ b/server/widgets/latest-histories/form.hbs
@@ -1,7 +1,7 @@
 <form name="widget-form-{{type}}">
   <div class="form-group">
     <label for="widget-form-{{type}}-title">{{t 'title'}}</label>
-    {{!-- <input name="title" value="{{title}}" type="text" class="form-control" id="widget-form-{{type}}-title" placeholder="{{t 'widget.title'}}"> --}}
+    <input name="title" value="{{title}}" type="text" class="form-control" id="widget-form-{{type}}-title" placeholder="{{t 'widget.title'}}">
   </div>
 
   {{{controllFields}}}
