--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -281,7 +281,7 @@ img[style="float:right;"] {
 
 .widget-narradores,
 .widget-narradores-nomes {
-  padding-bottom: 35px;
+  padding-bottom: 60px;
   background-color: #F3F4EE;
 
   .widget-header {
@@ -310,6 +310,8 @@ img[style="float:right;"] {
 }
 
 .widget-narradores {
+  padding-top: 55px;
+
   .avatar-item {
     text-align: center;
 
@@ -370,7 +372,7 @@ img[style="float:right;"] {
   background-color: #F3F4EE;
   .list-inline {
     margin-bottom: 0px;
-    padding: 20px 0px 40px 0px;
+    padding: 40px 0px 40px 0px;
 
     li {
       background: transparent;
@@ -407,6 +409,10 @@ img[style="float:right;"] {
 }
 
 body.body-main-index {
+  #content {
+    min-height: auto;
+  }
+
   .widget-pinion .pinion-helper {
     .container-fixed();
 
@@ -421,3 +427,56 @@ body.body-main-index {
     }
   }
 }
+
+.widget-latest-histories {
+  background-color: #EBEF00;
+
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  .hh-subtitle {
+    text-align: center;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: bold;
+    font-weight: bolder;
+    font-size: 25px;
+  }
+
+  .carousel {
+    background-color: transparent;
+    border-bottom: 0px;
+  }
+
+  .carousel-inner>.item>a>img {
+    display: inline-block;
+    margin: 10px;
+  }
+
+  .hhc-image {
+    border: 4px solid #fff;
+  }
+
+  .widget-header {
+    text-align: center;
+    font-size: 25px;
+
+    h3 {
+      margin-top: 0px;
+      font-size: 25px;
+    }
+
+    .container-fixed();
+    @media (min-width: @screen-sm-min) {
+      width: @container-sm;
+    }
+    @media (min-width: @screen-md-min) {
+      width: @container-md;
+    }
+    @media (min-width: @screen-lg-min) {
+      width: @container-lg;
+    }
+  }
+}
+
+
