update build and add some visual improvements

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -6,6 +6,34 @@
   margin-top: 0px;
 }
 
+.hfah-title {
+  text-align: center;
+  font-weight: 300;
+  line-height: 1.5em;
+  margin: 0px 0 15px;
+  font-size: 43px;
+  color: #9a9a9a
+
+}
+
+.history-findAll-header {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 30px;
+}
+
+.history-search {
+  margin-bottom: 25px;
+
+  .form-inline {
+    text-align: center;
+  }
+
+  input {
+    width: 350px !important;
+    border: 1px solid #ccc5b9;
+  }
+}
+
 .ht-title {
   margin-top: 0px;
   font-size: 20px;
@@ -21,6 +49,7 @@
 
 .ht-creator {
   .ht-creator-avatar {
+    padding: 1px;
     float: left;
     margin: 0px 5px 3px 0px;
     width: 40px;
