--- a/server/themes/one-page-new-age/files/less/theme/theme.less
+++ b/server/themes/one-page-new-age/files/less/theme/theme.less
@@ -61,7 +61,7 @@ p {
   margin-bottom: 20px;
 }
 .navbar-default {
-  background-color: white;
+  background-color: #E6F2E7;
   border-color: rgba(34, 34, 34, 0.05);
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -73,6 +73,7 @@ p {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   color: @navbar-color;
+  float: none;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
@@ -86,7 +87,8 @@ p {
 .navbar-default .nav > li > a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 13px;
+  color: #66615b;
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -106,11 +108,6 @@ p {
   background-color: transparent;
 }
 @media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    border-color: transparent;
-  }
-
   .navbar-default.affix {
     background-color: white;
     border-color: rgba(34, 34, 34, 0.1);
@@ -435,7 +432,7 @@ body {
 
 .navbar-brand img {
   display: inline;
-  width: 145px;
+  width: 170px;
   margin-right: 5px;
 }
 
@@ -469,17 +466,16 @@ header {
 }
 
 #mainNav {
-  background-color: white;
-  border-color: rgba(34, 34, 34, 0.1);
   padding-bottom: 5px;
 }
 
 .navbar-default a {
   color: #000;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .navbar {
+  padding: 10px;
   margin-bottom: 0px;
 }
 
@@ -496,9 +492,9 @@ body.body-main-index #we-layout{
   list-style: none;
 }
 
-footer {
-  margin-top: 20px;
-}
+// footer {
+//   margin-top: 20px;
+// }
 
 .body-main-index footer {
   margin-top: 0px;
