--- a/server/themes/one-page-new-age/files/public/style-default-source.css
+++ b/server/themes/one-page-new-age/files/public/style-default-source.css
@@ -6802,7 +6802,7 @@ p {
   margin-bottom: 20px;
 }
 .navbar-default {
-  background-color: white;
+  background-color: #E6F2E7;
   border-color: rgba(34, 34, 34, 0.05);
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -6814,6 +6814,7 @@ p {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   color: #000;
+  float: none;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
@@ -6827,7 +6828,8 @@ p {
 .navbar-default .nav > li > a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 13px;
+  color: #66615b;
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -6847,10 +6849,6 @@ p {
   background-color: transparent;
 }
 @media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    border-color: transparent;
-  }
   .navbar-default.affix {
     background-color: white;
     border-color: rgba(34, 34, 34, 0.1);
@@ -7171,7 +7169,7 @@ body {
 /* Costumized settings for be an we.js theme. */
 .navbar-brand img {
   display: inline;
-  width: 145px;
+  width: 170px;
   margin-right: 5px;
 }
 header {
@@ -7199,15 +7197,14 @@ header {
   color: #000;
 }
 #mainNav {
-  background-color: white;
-  border-color: rgba(34, 34, 34, 0.1);
   padding-bottom: 5px;
 }
 .navbar-default a {
   color: #000;
-  font-weight: bold;
+  font-weight: 500;
 }
 .navbar {
+  padding: 10px;
   margin-bottom: 0px;
 }
 body #we-layout {
@@ -7219,9 +7216,6 @@ body.body-main-index #we-layout {
 .content-view-record .tags {
   padding-left: 0;
   list-style: none;
-}
-footer {
-  margin-top: 20px;
 }
 .body-main-index footer {
   margin-top: 0px;
@@ -7914,6 +7908,28 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
 .history-title {
   margin-top: 0px;
 }
+.hfah-title {
+  text-align: center;
+  font-weight: 300;
+  line-height: 1.5em;
+  margin: 0px 0 15px;
+  font-size: 43px;
+  color: #9a9a9a;
+}
+.history-findAll-header {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 30px;
+}
+.history-search {
+  margin-bottom: 25px;
+}
+.history-search .form-inline {
+  text-align: center;
+}
+.history-search input {
+  width: 350px !important;
+  border: 1px solid #ccc5b9;
+}
 .ht-title {
   margin-top: 0px;
   font-size: 20px;
@@ -7926,6 +7942,7 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
   margin-bottom: 7px;
 }
 .ht-creator .ht-creator-avatar {
+  padding: 1px;
   float: left;
   margin: 0px 5px 3px 0px;
   width: 40px;
