--- a/server/themes/one-page-new-age/templates/server/partials/header.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/header.hbs
@@ -1,4 +1,4 @@
-{{{template 'partials/header-topbar'}}}
+{{!-- {{{template 'partials/header-topbar'}}} --}}
 <nav id="mainNav" class="navbar navbar-default {{#if req.we.systemSettings.logoUrl}}with-site-logo{{/if}}">
   <div class="container">
     <div class="navbar-header">
@@ -18,6 +18,40 @@
       </a>
     </div>
     <div class="collapse navbar-collapse" id="navbar1">
+      {{#if req.user.id}}
+        {{#if menuAuthenticated}}
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="/notification" class="main-menu-notification-link">
+                <span class="glyphicon glyphicon-bell"></span>
+                <span class="main-menu-link-notification-count badge"></span>
+                <span class="main-menu-notification-text">{{t 'notification.find'}}</span>
+              </a>
+            </li>
+            <li class="dropdown">
+              <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle" href="#">
+                Olá, {{req.user.displayName}} {{we-avatar id=req.user.id style='thumbnail' width="18px"}}
+              </a>
+              {{we-menu menuAuthenticated class="dropdown-menu"}}
+            </li>
+          </ul>
+        {{else}}{{we-menu userMenu class="nav navbar-nav navbar-right"}}
+        {{/if}}
+      {{else}}
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="/login" class="">
+              <span class="glyphicon glyphicon-log-in"></span> Entrar
+            </a>
+          </li>
+          <li>
+            <a href="/signup" class="">
+              <span class="glyphicon glyphicon-plus"></span> Registrar
+            </a>
+          </li>
+        </ul>
+      {{/if}}
+
       {{we-menu menuMain class="nav navbar-nav navbar-right"}}
     </div>
   </div>
