update news css and build

--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -34,8 +34,7 @@
 }
 
 
-.widget-simple-event,
-.widget-news {
+.widget-simple-event {
   .widget-news-item {
     border-bottom: 1px dashed @border-color;
     margin-bottom: 10px;
