--- a/server/themes/one-page-new-age/templates/server/widgets/news.hbs
+++ b/server/themes/one-page-new-age/templates/server/widgets/news.hbs
@@ -2,20 +2,22 @@
   {{#ifCond widget.layout "home"}}
     <div class="container">
       {{#if widget.news.length}}
-        {{#we-grid items=widget.news cols=3}}
-          <div class="widget-news-panel panel panel-default match-grid-col-scroll">
-            {{#each featuredImage}}
-              <a href="/news/{{../id}}"><img class="img-responsive" src="{{urls.large}}"></a>
-            {{/each}}
-            <div class="panel-body">
-              <h4><a href="/news/{{id}}">{{title}}</a></h4>
-              <p>
-                {{{about}}}
-                <br><a href="/news/{{id}}">leia mais <i class="glyphicon glyphicon-link"></i></a>
-              </p>
+        {{#each widget.news}}
+          <div class="widget-news-item">
+            <div class="row">
+              <div class="col-md-5">
+                {{#each featuredImage}}
+                  <a href="/news/{{../id}}"><img class="img-responsive wni-featuredImage" src="{{urls.large}}"></a>
+                {{/each}}
+              </div>
+              <div class="col-md-7">
+                <h4><a href="/news/{{id}}">{{title}}</a></h4>
+                <div class="wni-about">{{{about}}}</div>
+                <a href="/news/{{id}}" class="btn btn-default">leia mais <i class="glyphicon glyphicon-link"></i></a>
+              </div>
             </div>
           </div>
-        {{/we-grid}}
+        {{/each}}
       {{/if}}
     </div>
   {{else}}
