add some visual updates and history-more-from-creator widget

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -12,8 +12,7 @@
   line-height: 1.5em;
   margin: 0px 0 15px;
   font-size: 43px;
-  color: #9a9a9a
-
+  color: #9a9a9a;
 }
 
 .history-findAll-header {
@@ -90,4 +89,20 @@
 
 .we-form-actions {
   clear: both;
+}
+
+.hmfc-item {
+  margin-bottom: 20px;
+
+  .hmfc-title {
+    font-size: 14px;
+  }
+}
+
+.history-findOne {
+  margin-bottom: 25px;
+
+  .history-videos {
+    margin-top: 10px;
+  }
 }
