--- a/server/themes/one-page-new-age/files/less/theme/menu.less
+++ b/server/themes/one-page-new-age/files/less/theme/menu.less
@@ -2,3 +2,39 @@
   border: 1px solid @border-color;
   border-radius: 5px;
 }
+
+.link-create-history {
+  background-color: #f3bb45;
+  color: #fff !important;
+  font-weight: bold !important;
+  border-radius: 20px;
+  height: 35px;
+  margin-top: 8px;
+  line-height: 5px !important;
+
+  &:hover {
+    background-color: #bb992f !important;
+  }
+}
+
+.main-menu-notification-link {
+  padding-left: 7px;
+  padding-right: 2px;
+}
+
+.link-login {
+  background-color: #fff;
+  color: #7ac29a !important;
+  font-weight: bold;
+  border-radius: 20px;
+  border: 2px solid #7ac29a;
+  height: 35px;
+  margin-top: 8px;
+  margin-left: 3px;
+  line-height: 3px !important;
+
+  &:hover {
+    background-color: #bb992f !important;
+  }
+
+}
