--- a/server/themes/one-page-new-age/files/less/theme/news.less
+++ b/server/themes/one-page-new-age/files/less/theme/news.less
@@ -46,3 +46,17 @@
 .widget-news-item {
   margin-bottom: 30px;
 }
+
+.featured-image-findOne {
+  max-height: 600px;
+  margin-bottom: 10px;
+}
+
+
+.widget-history-more-from-creator {
+  .widget-header {
+    h3 {
+      font-size: 20px;
+    }
+  }
+}
