--- a/server/themes/one-page-new-age/templates/server/partials/header.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/header.hbs
@@ -38,18 +38,18 @@
         {{else}}{{we-menu userMenu class="nav navbar-nav navbar-right"}}
         {{/if}}
       {{else}}
-        <ul class="nav navbar-nav navbar-right">
+       {{!--  <ul class="nav navbar-nav navbar-right user-menu">
           <li>
-            <a href="/login" class="">
+            <a href="/login" class="login-link">
               <span class="glyphicon glyphicon-log-in"></span> Entrar
             </a>
           </li>
           <li>
-            <a href="/signup" class="">
+            <a href="/signup" class="signup-link">
               <span class="glyphicon glyphicon-plus"></span> Registrar
             </a>
           </li>
-        </ul>
+        </ul> --}}
       {{/if}}
 
       {{we-menu menuMain class="nav navbar-nav navbar-right"}}
