--- a/server/themes/one-page-new-age/files/public/style-default-source.css
+++ b/server/themes/one-page-new-age/files/public/style-default-source.css
@@ -6459,8 +6459,6 @@ button.close {
 .modal-footer:after,
 .widget-news .widget-header:before,
 .widget-news .widget-header:after,
-#region-sidebar .widget .widget-content:before,
-#region-sidebar .widget .widget-content:after,
 .widget-narradores .widget-content:before,
 .widget-narradores .widget-content:after,
 .widget-narradores-nomes .widget-content:before,
@@ -6493,7 +6491,6 @@ body.body-main-index .widget-pinion .pinion-helper:after,
 .modal-header:after,
 .modal-footer:after,
 .widget-news .widget-header:after,
-#region-sidebar .widget .widget-content:after,
 .widget-narradores .widget-content:after,
 .widget-narradores-nomes .widget-content:after,
 .widget-narradores .widget-header:after,
@@ -7408,19 +7405,11 @@ hr {
 #region-content .widget .widget-header {
   text-align: center;
 }
-#region-content .widget h3 {
-  font-size: 45px;
-  margin: 55px 0px 30px 0px;
-}
 #region-content .widget h4 {
   font-size: 24px;
 }
 .hotel-widget-rooms .hotel-room-name {
   text-align: center;
-}
-#region-content .widget .widget-header h3 bind-html {
-  border-bottom: 1px solid #ccc;
-  display: inline-block;
 }
 .navbar-nav {
   margin-top: 10px;
@@ -7450,9 +7439,6 @@ body.iframe-page-type .system-actions {
 }
 body.iframe-page-type footer {
   display: none;
-}
-.featured-image-findOne {
-  margin-bottom: 10px;
 }
 .g-recaptcha {
   margin-bottom: 10px;
@@ -7508,6 +7494,36 @@ body.iframe-page-type footer {
 .sidebar-nav > li {
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+.link-create-history {
+  background-color: #f3bb45;
+  color: #fff !important;
+  font-weight: bold !important;
+  border-radius: 20px;
+  height: 35px;
+  margin-top: 8px;
+  line-height: 5px !important;
+}
+.link-create-history:hover {
+  background-color: #bb992f !important;
+}
+.main-menu-notification-link {
+  padding-left: 7px;
+  padding-right: 2px;
+}
+.link-login {
+  background-color: #fff;
+  color: #7ac29a !important;
+  font-weight: bold;
+  border-radius: 20px;
+  border: 2px solid #7ac29a;
+  height: 35px;
+  margin-top: 8px;
+  margin-left: 3px;
+  line-height: 3px !important;
+}
+.link-login:hover {
+  background-color: #bb992f !important;
 }
 .user-banner {
   min-height: 130px;
@@ -7629,6 +7645,9 @@ body.iframe-page-type footer {
 }
 .comment-teaser .media-heading {
   font-size: 12px;
+}
+.content-comments {
+  margin-top: 15px;
 }
 .tags {
   font: 12px/1.5 'PT Sans', serif;
@@ -7983,6 +8002,18 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
 .we-form-actions {
   clear: both;
 }
+.hmfc-item {
+  margin-bottom: 20px;
+}
+.hmfc-item .hmfc-title {
+  font-size: 14px;
+}
+.history-findOne {
+  margin-bottom: 25px;
+}
+.history-findOne .history-videos {
+  margin-top: 10px;
+}
 .social-logins {
   border-bottom: 1px solid #ddd;
   padding-bottom: 10px;
@@ -8045,6 +8076,13 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
 .widget-news-item {
   margin-bottom: 30px;
 }
+.featured-image-findOne {
+  max-height: 600px;
+  margin-bottom: 10px;
+}
+.widget-history-more-from-creator .widget-header h3 {
+  font-size: 20px;
+}
 .form-control.select2-hidden-accessible {
   width: 1px;
 }
@@ -8094,203 +8132,11 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
 .widget-simple-event .hotel-event-dates {
   font-size: 12px;
 }
-#region-sidebar .widget {
-  margin-bottom: 20px;
-  background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  border-color: #ccc;
-}
-#region-sidebar .widget > .list-group,
-#region-sidebar .widget > .panel-collapse > .list-group {
-  margin-bottom: 0;
-}
-#region-sidebar .widget > .list-group .list-group-item,
-#region-sidebar .widget > .panel-collapse > .list-group .list-group-item {
-  border-width: 1px 0;
-  border-radius: 0;
-}
-#region-sidebar .widget > .list-group:first-child .list-group-item:first-child,
-#region-sidebar .widget > .panel-collapse > .list-group:first-child .list-group-item:first-child {
-  border-top: 0;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-}
-#region-sidebar .widget > .list-group:last-child .list-group-item:last-child,
-#region-sidebar .widget > .panel-collapse > .list-group:last-child .list-group-item:last-child {
-  border-bottom: 0;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-#region-sidebar .widget > .panel-heading + .panel-collapse > .list-group .list-group-item:first-child {
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
-}
-#region-sidebar .widget > .table,
-#region-sidebar .widget > .table-responsive > .table,
-#region-sidebar .widget > .panel-collapse > .table {
-  margin-bottom: 0;
-}
-#region-sidebar .widget > .table caption,
-#region-sidebar .widget > .table-responsive > .table caption,
-#region-sidebar .widget > .panel-collapse > .table caption {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-#region-sidebar .widget > .table:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child {
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-}
-#region-sidebar .widget > .table:first-child > thead:first-child > tr:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child,
-#region-sidebar .widget > .table:first-child > tbody:first-child > tr:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child {
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-}
-#region-sidebar .widget > .table:first-child > thead:first-child > tr:first-child td:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child td:first-child,
-#region-sidebar .widget > .table:first-child > tbody:first-child > tr:first-child td:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child td:first-child,
-#region-sidebar .widget > .table:first-child > thead:first-child > tr:first-child th:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child th:first-child,
-#region-sidebar .widget > .table:first-child > tbody:first-child > tr:first-child th:first-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child th:first-child {
-  border-top-left-radius: 3px;
-}
-#region-sidebar .widget > .table:first-child > thead:first-child > tr:first-child td:last-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child td:last-child,
-#region-sidebar .widget > .table:first-child > tbody:first-child > tr:first-child td:last-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child td:last-child,
-#region-sidebar .widget > .table:first-child > thead:first-child > tr:first-child th:last-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child th:last-child,
-#region-sidebar .widget > .table:first-child > tbody:first-child > tr:first-child th:last-child,
-#region-sidebar .widget > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child th:last-child {
-  border-top-right-radius: 3px;
-}
-#region-sidebar .widget > .table:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child {
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-#region-sidebar .widget > .table:last-child > tbody:last-child > tr:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child,
-#region-sidebar .widget > .table:last-child > tfoot:last-child > tr:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child {
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-#region-sidebar .widget > .table:last-child > tbody:last-child > tr:last-child td:first-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child td:first-child,
-#region-sidebar .widget > .table:last-child > tfoot:last-child > tr:last-child td:first-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child td:first-child,
-#region-sidebar .widget > .table:last-child > tbody:last-child > tr:last-child th:first-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child th:first-child,
-#region-sidebar .widget > .table:last-child > tfoot:last-child > tr:last-child th:first-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child th:first-child {
-  border-bottom-left-radius: 3px;
-}
-#region-sidebar .widget > .table:last-child > tbody:last-child > tr:last-child td:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child td:last-child,
-#region-sidebar .widget > .table:last-child > tfoot:last-child > tr:last-child td:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child td:last-child,
-#region-sidebar .widget > .table:last-child > tbody:last-child > tr:last-child th:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child th:last-child,
-#region-sidebar .widget > .table:last-child > tfoot:last-child > tr:last-child th:last-child,
-#region-sidebar .widget > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child th:last-child {
-  border-bottom-right-radius: 3px;
-}
-#region-sidebar .widget > .panel-body + .table,
-#region-sidebar .widget > .panel-body + .table-responsive,
-#region-sidebar .widget > .table + .panel-body,
-#region-sidebar .widget > .table-responsive + .panel-body {
-  border-top: 1px solid #ddd;
-}
-#region-sidebar .widget > .table > tbody:first-child > tr:first-child th,
-#region-sidebar .widget > .table > tbody:first-child > tr:first-child td {
-  border-top: 0;
-}
-#region-sidebar .widget > .table-bordered,
-#region-sidebar .widget > .table-responsive > .table-bordered {
-  border: 0;
-}
-#region-sidebar .widget > .table-bordered > thead > tr > th:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr > th:first-child,
-#region-sidebar .widget > .table-bordered > tbody > tr > th:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr > th:first-child,
-#region-sidebar .widget > .table-bordered > tfoot > tr > th:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr > th:first-child,
-#region-sidebar .widget > .table-bordered > thead > tr > td:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr > td:first-child,
-#region-sidebar .widget > .table-bordered > tbody > tr > td:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr > td:first-child,
-#region-sidebar .widget > .table-bordered > tfoot > tr > td:first-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr > td:first-child {
-  border-left: 0;
-}
-#region-sidebar .widget > .table-bordered > thead > tr > th:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr > th:last-child,
-#region-sidebar .widget > .table-bordered > tbody > tr > th:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr > th:last-child,
-#region-sidebar .widget > .table-bordered > tfoot > tr > th:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr > th:last-child,
-#region-sidebar .widget > .table-bordered > thead > tr > td:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr > td:last-child,
-#region-sidebar .widget > .table-bordered > tbody > tr > td:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr > td:last-child,
-#region-sidebar .widget > .table-bordered > tfoot > tr > td:last-child,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr > td:last-child {
-  border-right: 0;
-}
-#region-sidebar .widget > .table-bordered > thead > tr:first-child > td,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr:first-child > td,
-#region-sidebar .widget > .table-bordered > tbody > tr:first-child > td,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr:first-child > td,
-#region-sidebar .widget > .table-bordered > thead > tr:first-child > th,
-#region-sidebar .widget > .table-responsive > .table-bordered > thead > tr:first-child > th,
-#region-sidebar .widget > .table-bordered > tbody > tr:first-child > th,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr:first-child > th {
-  border-bottom: 0;
-}
-#region-sidebar .widget > .table-bordered > tbody > tr:last-child > td,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr:last-child > td,
-#region-sidebar .widget > .table-bordered > tfoot > tr:last-child > td,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr:last-child > td,
-#region-sidebar .widget > .table-bordered > tbody > tr:last-child > th,
-#region-sidebar .widget > .table-responsive > .table-bordered > tbody > tr:last-child > th,
-#region-sidebar .widget > .table-bordered > tfoot > tr:last-child > th,
-#region-sidebar .widget > .table-responsive > .table-bordered > tfoot > tr:last-child > th {
-  border-bottom: 0;
-}
-#region-sidebar .widget > .table-responsive {
-  border: 0;
-  margin-bottom: 0;
-}
-#region-sidebar .widget .widget-header {
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-  color: #333333;
-  background-color: #f5f5f5;
-  border-color: #ddd;
-}
-#region-sidebar .widget .widget-header > .dropdown .dropdown-toggle {
-  color: inherit;
-}
 #region-sidebar .widget .widget-header h3 {
-  font-family: inherit;
-  margin: 0px;
-  font-size: 14px;
+  font-size: 24px;
 }
 #region-sidebar .widget .news-title {
   margin-top: 0px;
-}
-#region-sidebar .widget .widget-content {
-  padding: 15px;
 }
 body.body-main-index .hotel-event-teaser {
   padding-top: 15px;
