--- a/server/widgets/history-more-from-creator/view.hbs
+++ b/server/widgets/history-more-from-creator/view.hbs
@@ -6,7 +6,7 @@
           {{#if featuredImage.length}}
             {{we-image featuredImage 'medium' class="hmfc-featuredImage img-thumbnail"}}
           {{else}}
-            <img src="/public/project/placeholder" />
+            <img src="/public/project/placeholder.jpg" />
           {{/if}}
           <h4 class="hmfc-title">{{we-strip-tags text=title maxLength=50}}</h4>
         </a>
