--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -465,5 +465,38 @@ body.body-main-index {
     }
   }
 }
+#region-content .widget.widget-home-video-block {
+  margin-top: 55px;
+  margin-bottom: 55px;
+}
 
+.widget-home-video-block {
 
+  h3 {
+    margin-top: 0px;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    @media (min-width: @screen-sm-min) {
+      font-size: 22px;
+    }
+
+    @media (min-width: @screen-md-min) {
+      font-size: 42px;
+    }
+  }
+
+  .btn-default {
+    background-color: #f3bb45;
+    color: #fff!important;
+    font-weight: 700!important;
+    border-radius: 20px;
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+    &:hover {
+      background-color: #bb992f !important;
+    }
+  }
+}
