--- a/server/themes/one-page-new-age/files/public/style-default-source.css
+++ b/server/themes/one-page-new-age/files/public/style-default-source.css
@@ -8468,3 +8468,34 @@ body.body-main-index .widget-pinion .pinion-helper {
     width: 1170px;
   }
 }
+#region-content .widget.widget-home-video-block {
+  margin-top: 55px;
+  margin-bottom: 55px;
+}
+.widget-home-video-block h3 {
+  margin-top: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .widget-home-video-block h3 {
+    font-size: 22px;
+  }
+}
+@media (min-width: 992px) {
+  .widget-home-video-block h3 {
+    font-size: 42px;
+  }
+}
+.widget-home-video-block .btn-default {
+  background-color: #f3bb45;
+  color: #fff!important;
+  font-weight: 700!important;
+  border-radius: 20px;
+  font-size: 18px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.widget-home-video-block .btn-default:hover {
+  background-color: #bb992f !important;
+}
