--- a/server/themes/one-page-new-age/templates/server/history/findOne.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/findOne.hbs
@@ -63,25 +63,27 @@
       </div>
     {{/if}}
 
-    {{#if data.audio}}
+    {{#if data.haveAudio}}
       <div class="history-audio">
         <h4>Audios</h4>
-        <div class="row">
-          {{#each data.audios}}
-            <div class="col-sm-12 col-md-6">
-              <div class="embed-responsive-4by3">
-                <iframe src="{{urls.original}}" frameborder="0" class="embed-responsive-item history-audio-preview"></iframe>
-              </div>
-            </div>
-          {{/each}}
-          {{#each data.audioUrls}}
-            <div class="col-sm-12 col-md-6">
-              <div class="embed-responsive-4by3">
-                <iframe src="{{this.url}}" frameborder="0" class="embed-responsive-item history-audio-preview"></iframe>
-              </div>
-            </div>
-          {{/each}}
-        </div>
+        <table class="table table-striped table-bordered">
+          <tbody>
+            {{#each data.audios}}
+              <tr>
+                <td>
+                  <i class="fa fa-file-audio-o" aria-hidden="true"></i> <a href="{{urls.original}}" target="_blank">{{urls.original}}</a>
+                </td>
+              </tr>
+            {{/each}}
+            {{#each data.audioUrls}}
+              <tr>
+                <td>
+                  <i class="fa fa-file-audio-o" aria-hidden="true"></i> <a href="{{url}}" target="_blank">{{url}}</a>
+                </td>
+              </tr>
+            {{/each}}
+          </tbody>
+        </table>
       </div>
     {{/if}}
 
