update unpublished history text

--- a/server/themes/one-page-new-age/templates/server/history/findOne.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/findOne.hbs
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-md-9">
     {{#unless data.published}}
-      <div class="alert alert-warning" role="alert">Despublicado! A sua história ainda não foi publicada.</div>
+      <div class="alert alert-warning" role="alert"><img class="pinion-image" src="/public/project/pinion-amarelo.png"> Sua história foi enviada com sucesso e encaminhada para a nossa triagem, em breve ela será publicada.</div>
     {{/unless}}
 
     <h1 class="history-title">{{data.title}}</h1>
